--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -4,67 +4,52 @@
 为了配合我国大型客机发展的战略需求，帮助新一代自主研制客机在节能减排绿色环保的道路上顺利前进，研究边界层减阻相关技术至关重要。对于大型民用客机，摩擦阻力几乎占到了总阻力的一半\cite{Schrauf2005}。而这些摩擦阻力又主要由机身和机翼贡献。就机翼而言，其流向长度不大，将层流向湍流转捩的过程推迟的层流技术，非常有应用前景\cite{Joslin1998}。但是对于机身，其流向尺度过大，机身中后段边界层已经无可避免的发展为湍流，这个时候层流技术毫无用武之地，必须使用通过改变充分发展湍流中拟序结构降低湍流阻力的方法。针对这两种完全不同的情况，本文将其抽象为两个分别与之对应的科学问题进行研究。关于机翼减阻的问题，本文将其简化为三维边界层层流-湍流转捩推迟问题。关于机身上减阻的问题，本文将其抽象成充分发展槽道壁湍流减阻控制问题。
 \begin{figure}[htb]
   \centering
-  \includegraphics[width=0.8\textwidth]{ch1/Schrauf2005.jpg}
+  \includegraphics[width=0.6\textwidth]{ch1/Schrauf2005.jpg}
   \caption{大型客机阻力分解\cite{Schrauf2005}}\label{f:Schrauf2005}
 \end{figure}
 
-为了完成减阻的目标，本文以介质阻挡放电（DBD）等离子体激发器作为控制装置。这种激发器由于有响应时间短，安装方便，耗能低，器件小等众多优点，近些年得到了流动控制领域研究者们的青睐。在引言的第一节，本文先简要的介绍一下这种控制装置、其数值模拟方法与其在流动控制中的应用。在随后的两节里分别介绍后掠翼转捩推迟与壁湍流流动控制的研究现状。
+为了完成减阻的目标，本文以介质阻挡放电（DBD）等离子体激发器作为控制装置。这种激发器由于有响应时间短，安装方便，耗能低，器件小等众多优点，近些年得到了流动控制领域研究者们的青睐。在引言的第一节，本文先简要的介绍一下这种流动控制装置的特点、数值模拟方法与相关应用。在随后的两节里分别介绍后掠翼转捩推迟与壁湍流流动控制的研究现状。
 
 
 \section{介质阻挡放电等离子体激发器}
 
-等离子体是除了液态、固态以及气态之外的物质第四态\cite{zhangguling2008,niewanshang2012}。等离子体可由高温或者强电场产生。高温条件下气体会离解产生等离子体。在电场力的作用下气体也会电离产生等离子体，电离产生的等离子体通常由大量的电子和相应成对出现的离子构成。在电场的作用下，等离子体可以表现出明显的集体行为
-\cite{wuhong2015}。在本文中，主要是用的介质阻挡放电等离子体激发器。这种激发器由两片电击和一层绝缘层构成（如图~\ref{fig:SchematicPlasma}所示）。当在两片电极上加上高电压时，两片电击之间的空气就会被电离，在介质表面形生成等离子体。这一控制装置相比传统的控制装置有诸多优点\cite{Corke2010}。首先，控制部件的主要构成就是两个电极片和一张绝缘层，非常轻便。其次，其反应速度很快，激励频率可以范围可以很广，在流动控制中可以很方便的避开流动的特征频率。第三，耗能很低，每厘米耗能在0.1瓦特量级。最后，在不需要控制的时候激励器对流动完全没有影响。
+等离子体是除了液态、固态以及气态之外的物质第四态\cite{zhangguling2008,niewanshang2012}。等离子体可由高温或者强电场产生。由强电场电离产生的等离子体通常由大量的电子和相应成对出现的离子构成。在电场的作用下，等离子体可以表现出明显的集体行为
+\cite{wuhong2015}。在本文中，主要是用的介质阻挡放电等离子体激发器。这种激发器由两片电击和一层绝缘层构成（如图~\ref{fig:SchematicPlasma}所示）。当在两片电极上加上高电压时，两片电击之间的空气就会被电离，在介质表面形生成等离子体。等离子体收到电场的驱动，就会形成平行于壁面的“电风”（electric wind）。这一控制装置相比传统的控制装置有诸多优点\cite{Corke2010}。首先，控制部件的主要构成就是两个电极片和一张绝缘层，非常轻便。其次，其反应速度很快，激励频率可以范围可以很广，在流动控制中可以很方便的避开流动的特征频率。第三，耗能很低，每厘米耗能在0.1瓦特量级。最后，在不需要控制的时候激励器对流动完全没有影响。
 
+DBD等离子体激励器对流动的影响可以分为三类，分别是物性变化效应，动量加速效应以及温升热冲击效应\cite{yu2017}。对于不可压缩流动，其动量加速效应占主导，另外两种效应可以忽略。动量加速效应可以被等效为体积力效应，简单地说，就是等离子体激发器将体积力作用于其附近的流体上。通过实验确定激发器所产生体积力的强度对之后的流动控制研究至关重要\cite{Enloe2004,Debien2012,Kriegseis2011,Hoskinson2010,Durscher2011}。实验研究发现，DBD激发器产生的总的力基本上随着其功率的上升而线性增加，效用系数大约为0.25mN/W\cite{Kriegseis2011}。在激励频率固定的情况下，激励器产生的总的力与电压的平方成正比\cite{Debien2012}，即$F\propto(V-V_0)^2$。目前试验中测量到的最强的体积力为125mN/m\cite{Thomas2009}，采用了40kV的电压和1kHz的频率。电介质采用的是6.35mm厚的石英。这最强的激发器的能耗为4W/cm。由DBD激发器产生的“电风”的最大速度会随着能耗的增加而增加，但是当能耗达到2W/cm之后，会达到饱和状态\cite{Jolibois2009}。除了测量最大风速，学者们还采用PIV（particle image velocimetry，粒子成像测速）技术对“电风”在空间的分布进行了测量\cite{Kotsonis2011,kriegseis2013velocity}，其流速矢量场如\ref{f:Kotsonis2011}。由于本文的重点是探讨如何采用DBD激发器进行流动控制，其物理机理在这里就不做过多探讨，读者可以参考文献\cite{Moreau2007,Benard2014}。
 
-在电场的作用下，带电的离子会做定向运动，并通过与不带电的空气分子的碰撞作用，将动量转移到空气分子上。从宏观的角度看，等离子体激发器在开启时会产生图示方向的射流。由于本文主要是采用数值模拟的方法研究这种激发器在流动控制中的应用，所以本文将在引言的第一部分重点介绍DBD等离子体激发器的数值模拟方法与将其应用于流动控制的研究现状。
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{plasma}
   \caption{等离子体激发器示意图\cite{Whalley2012}}\label{fig:SchematicPlasma}
 \end{figure}
+\begin{figure}
+  \centering
+  \includegraphics[width=0.6\textwidth]{ch1/Kotsonis2011.JPG}
+  \caption{Kotsonis和Ghaemi\cite{Kotsonis2011}采用PIV测量得到的DBD激发器诱发出的流场矢量图}\label{f:Kotsonis2011}
+\end{figure}
+本文主要是采用数值模拟的方法研究这种激发器在流动控制中的应用，所以本文将在引言的第一部分重点介绍DBD等离子体激发器的数值模拟方法与其在流动控制领域的应用现状。
+
 
 \subsection{介质阻挡放电等离子体激发器数值模拟方法}
-从目前的研究可知，介质阻挡放电等离子体的放电和气动激励过程中的各个物理过程的时间跨度较大，其中包括瞬间发生的电磁场分布过程、不足纳秒和纳秒级的电子能量传输及输运过程、微秒级的离子输运过程和毫秒级的中性气体间的动量交换及传热过程等，较大的时间跨度使得对等离子体的数值仿真存在着较大的难度。因此，许多研究者提出可以在结果合理的前提下，对等离子体气动激励这一复杂的多物理过程进行必要的简化，提出其中的主要激励机理。在现阶段，这种简化过程对研究和应用等离子体流动控制这一前沿技术是十分必要的。目前，介质阻挡放电等离子体气动激励的仿真模型主要有以下几类。
+介质阻挡放电等离子体的放电和气动激励包含诸多复杂的物理过程，其中包括电磁场分布变化，电子能量传输及输运，离子输运和离子、中性气体之间的动量热量传导。这些物理过程时间尺度差异巨大，直接对所有过程进行数值仿真具有相当的难度。所以合理的简化模型对实际应用至关重要。
 
-等离子体简化模型唯象简化模型作为数值模拟中最为简单和常见的模型，其基本思路是将因粒子碰撞产生的动量传递效应简化为一种作用于流体的电场力，并将其以体积力源项的形式与 N-S 方程耦合求解。简化模型通常需要利用实验结果对模型中的相关参数进行修正。基于不同的假设条件，Massines
-[89]
-、Orlov
-[90]
-、Shyy
-[91]
-、
-Suzen
-[92]
-、Roth
-[93]
-分别各自提出了自己的简化模型，同时国内外的研究者在此
-类模型基础上做了大量的研究工作。Rizzetta
-[94]
-基于 Shyy 提出的简化模型，并
-利用大涡模拟数值方法研究了等离子体对湍流附面层的流动控制。毛枚良
-[95]
-等人利用简化模型，对 NACA0015 翼型进行了数值研究，探讨了大气压下辉
-光放电等离子体对边界层流动的影响。陈浮
-[96]
-等人采用三种不同的简化模型
-对比研究了 5kV 激励电压作用下的诱导流场，分析探讨了各模型的优缺点。
-王江南
-[97]
-等人进行了流动分离控制的数值模拟研究，结果表明等离子体流动
-控制方法可以有效地延迟流动的分离，达到增升减阻的目的。
-1.4.5.2 集总电路求解模型
-集总电路求解模型主要基于等离子体放电过程中的电流与电场强度的关
-系，建立起等离子体气动激励器电特性的分析模型。此类简化模型可以获得功
-率和电流随时间变化的数学表达式，以及电功率、电流和相位差对电压幅值、
-交流电频率、绝缘层厚度和介电常数等参数之间的依赖关系。该模型通过将等
-离子体激励器等效成一个集总电路原件的形式来描述等离子体气动激励器的
-行为。Orlov
-[98]
-验证了等离子体气动激励器的推力与施加在电极两端的电压成
+传统的等离子体模型可以分为两类，一种是从第一原理出发的模型，还有一种是唯像简化模型。从第一原理出发的模型会对激发器电离等离子体的每一个物理过程进行建模，并进行求解。这一类模型往往需要求解带电的和不带电组分的输运方程，电场的泊松方程以及纳维-斯托克斯（N-S）方程。Boeuf等人\cite{Boeuf2007}采用电子-离子两组分的模型模拟了DBD放电的全过程，并通过计算作用在带点离子上的电场力，得到了DBD产生的总的体积力。该课题组随后又将不带电的中性离子也纳入考虑范畴，清楚的解析了带电粒子与中性粒子之间的动量传输过程。Boeuf等人\cite{Boeuf2009}在2009年进一步研究发现，在激励的正电压周期（电介质上的电极是阳极），中性粒子获得的动量主要来自正离子，相反，在另外半个周期动量主要来自负离子。Nishida等人\cite{Nishida2016,Nishida2011}分别求解了展向均匀和展向非均匀（电极上有小的凸起）构型的电离和气动激励过程，并对比发现忽略三维效应会使得预测的体积力流向分布范围变小，体积力强度也会变弱。基于第一原理的模型虽然能够给出体积力产生的详细物理过程，但是其计算量巨大，通常会比简化模型的计算量大一个量级。这些模型在研究等离子体产生机理以及优化设计激发器形状的时候非常有用，但是仅仅是进行流动控制相关的研究，这些模型有些过于浪费计算资源。
+
+唯像简化模型并不求解组分的输运方程，只是先验的给出一个等离子体或电场的分布。其中最经典的莫过于史维等人提出来的三角模型\cite{shyy2002}。该模型假设电场线性的分布在两个磁极之间的三角形区域，且忽略掉了体积力随时间的变化。由于这个模型极大的简化了DBD产生等离子体并与流体相互作用的过程，因此深得流动控制领域研究者的青睐。先后有学者将其应用于槽道湍流减阻\cite{LiZX2015}和翼型上表面层流分离抑制\cite{Rizzetta2011}。Orlov等人\cite{Orlov2006,Corke2008,Mertz2011}则是将DBD放电的电流环路简化成一个电路系统。这一电路系统一般包含若干形式相同的支路系统，每一个支路系统对应两片电极之间一处特定的空间。这样在抑制两片电极上电压随时间变化的规律，就能够进一步求解出电流、空间电场强度以及体积力的分布。Suzen等人\cite{suzen2005,suzen2007}基于实验\cite{Enloe2004,enloe2006}的观察，假设覆盖在电极上的电介质上表面的电荷密度分布为半个高斯函数的形式，即：
+\begin{equation}\label{e:suzen}
+  \rho_{c,w}(x,t)=\rho_cf(t)e^{-\frac{(x-\mu)^2}{2\sigma^2}}
+\end{equation}
+基于这一假设，只需要再求解关于空间电荷电位分布的泊松方程，即可得到激发器作用于流体上的体积力分布。这种做法巧妙的回避了各种组分输运方程的求解，但同时还原了部分的关键物理过程。Ibrahim等人\cite{Ibrahim2014}采用这一模型模拟了由DBD激发器驱动的槽道流动，并与实验\cite{Debiasi2011}对比发现，数值模拟可以很好的预测槽道中心的最大流速，但是速度剖面的吻合欠佳。Eltaweel等人\cite{Eltaweel2014}应用该模型，研究了如何使用DBD激发器进行串联圆柱降噪。总的而言，这类模型求解方便，计算量小，但是在精度方面却有些逊色。
+
+近些年来，很多学者提出了一种基于实验的等离子体模型\cite{albrecht2011method,Kotsonis2011,kriegseis2013velocity,Benard2014,wilke2009aerodynamische}。由于一般DBD的激励频率远高于流动的固有频率，DBD的激励周期远小于流动的特征尺度，所以可以近似认为流动对等离子体产生的体积力分布没有影响。所以只需要测定在某一特殊工况下的体积力分布，这一分布就可以拿来应用到其他控制工况的模拟中。在实验中，针对准二维流动，可以通过PIV测量得到两个方向的速度分量。然而，空间中的压力分布不知道，这就导致体积力的两个分量并不能够直接算出。为了解决这个问题，Wilke\cite{wilke2009aerodynamische}认为在DBD诱导出的流动中，体积力的强度远大于压力梯度，所以可以将压力梯度忽略掉。Albrecht\cite{albrecht2011method}用两个动量方程推导出涡量的输运方程。这一变化刚好约掉了压力项。另外，他认为，平行于壁面的体积力远大于垂直于壁面的体积力，并将后者忽略掉，从而得到了平行于壁面的体积力分布。D\"orr和Kloker\cite{dorr2015numerical}数值对比了这两种做法。他们先假设一个体积力分布，然后用直接数值模拟（DNS）计算得到这种预先设定的体积力会产生怎样的流场。之后在用上面提到的两种方法从流场反推体积力，来对比这两种方法的效果。他们发现，如果激发器是放置在边界层流动中，则压力项不能忽略，而若是在原本静止的流场中，则两种方法差别不大。Maden等人\cite{Maden2013}将基于实验的等离子体模型和之前介绍的两种唯像简化模型（史维模型\cite{shyy2002}和Suzen模型\cite{suzen2007}）进行了对比，他们发现基于实验的模型要好于唯像简化模型。在他们的工作中，还提出了一种用复杂解析表达式近似拟合体积力分布的模型。在他们的结果中，这一模型的表现也要好于唯像的简化模型。在后文中，将这模型简记为Maden模型。 由于基于实验的模型计算量小，精度高，本文在研究中主要应用这一类模型，实验数据来自Kriegseis\cite{kriegseis2013velocity}的文章。另外，Maden模型也有用到。
 
 \subsection{介质阻挡放电等离子体激发器在流动控制方面的应用}
-介质阻挡放电等离子体激发器的出现最早可以追溯到1979年\cite{Masuda1979}。在1998年，Roth首次将其用于流动控制\cite{Roth1998}。
+DBD等离子体激发器已经被应用于诸多流动控制领域，如抑制流动分离\cite{Benard2016a,Sujar-Garrido2015,Benard2011,Benard2011a,Benard2016b,Little2010,Schneck2014,Jukes2009}、影响层流-湍流转捩\cite{Duchmann2014,Grundmann2007a,Grundmann2008,Kurz2014,Kotsonis2013,Hanson2010,Hanson2014}、湍流边界层减阻\cite{Jukes2006,Jukes2009,Mahfoze2017}、缓解激波／附面层干扰\cite{Im2012,Peschke2013}、提高压气机与涡轮性能\cite{huang2006,Ness2012}、控制管道流动\cite{Benard2008}和辅助飞行姿态控制\cite{He2009,Wei2013bang}等。这里重点介绍和本文有关的，也就是推迟转捩和湍流边界层减阻方面的应用。其他方面的应用可以参考综述文章\cite{Corke2010,wang2013Recent,wuyun2015}
+
+在转捩推迟方面，DBD激发器最直接的应用就是依赖其产生的动量效应，对边界层流动进行加速，提高边界层流动的顺压梯度，从而抑制T-S波的发展。Riherd和Roy\cite{Riherd2013}采用数值模拟的方法验证了这一控制方案，Duchmann等人\cite{Duchmann2014,Grundmann2007a}和Grundmann等人\cite{Grundmann2007a}通过实验给出了证实。Riherd和Roy\cite{Riherd2014}还发现这一想法不仅对T-S波诱发的转捩有效，对流向条带诱发的转捩也能起到推迟的效果。除了增加边界层的顺压梯度之外，DBD还被应用于边界层内扰动的反向控制\cite{Grundmann2008,Kurz2014,Kotsonis2013}。这一应用主要得益于DBD激发器的快速响应能力。这种控方案通常需要在上游放置一个探测器。这样，DBD激发器所在位置的扰动相位就可以由上游探测器的信号准确的推算出来。然后用DBD激发器产生一个相当幅值但是反相位的扰动，就可以将边界层内原有的扰动波抵消掉。Hanson等人\cite{Hanson2010,Hanson2014}将DBD应用于控制边界层转捩过程中的瞬态增长。在他们研究的算例中，平板前缘有一排圆柱形的粗糙单元。这些粗糙单元会产生流向涡，并进一步导致扰动的瞬态增长。Hanson等人在下游放置DBD激发器来削弱这些流向涡，从而推迟了转捩。除了推迟二维边界转捩，DBD激发器还被应用于推迟三维边界层转捩。Schuele等人\cite{schuele2013control}将DBD激发器安装于一个带攻角的尖锥前端。这一流动的转捩本身是由横流失稳触发。实验中，DBD激发器起到了类似壁面粗糙单元的作用，激发出了次谐波模态。这一次谐波模态有效的推迟了转捩过程。D\"orr和Kloker\cite{dorr2016}用DBD激发器产生的“电风”削弱三维边界层中的二次流（横流）速度，从而降低了横流失稳模态的增长。本文也研究了类似的控制方法，并将其从后掠平板流动推广到实际的后掠翼流动中来。
+
+槽道湍流减阻\cite{LiZX2015}
 \section{通过推迟层流/湍流转捩减阻}
 \label{sec:first}
 众所周知，层流的摩擦阻力要比湍流的摩擦阻力小很多，所以流动减阻的一个重要方向就是扩大飞行器表面的层流范围。对于大型客机而言，由于机身长度过长，转捩总会无可避免的发生。相比之下，在机翼上发展和应用层流技术则有很大的前景。目前大多数客机使用的机翼还都是湍流机翼。湍流机翼发生从层流向湍流的转捩点一般在翼型弦长的10\%以前，而如果使用推迟转捩的层流技术，可以将转捩点推迟到20\%甚至70\%弦长之后。在这一小节，我们先简要介绍二维和三维边界层的失稳与转捩研究现状，最后再总结目前已经提出的转捩推迟手段。
