--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -230,7 +230,7 @@
   year={2015},
   publisher={IOP Publishing}
 }
-@article{shyy2002modeling,
+@article{shyy2002,
   title={Modeling of glow discharge-induced fluid dynamics},
   author={Shyy, W and Jayaraman, B and Andersson, A},
   journal={Journal of  Applied Physics},
@@ -240,23 +240,13 @@
   year={2002},
   publisher={AIP Publishing}
 }
-@article{orlov2006electric,
+@article{orlov2006,
   title={Electric circuit model for aerodynamic plasma actuator},
   author={Orlov, Dmitriy M and Corke, Thomas C and Patel, Mehul},
   journal={AIAA Paper},
   volume={1206},
   pages={2006},
   year={2006}
-}
-@article{boeuf2007electrohydrodynamic,
-  title={Electrohydrodynamic force in dielectric barrier discharge plasma actuators},
-  author={Boeuf, JP and Lagmich, Y and Unfer, Th and Callegari, Th and Pitchford, LC},
-  journal={Journal of Physics D: Applied Physics},
-  volume={40},
-  number={3},
-  pages={652},
-  year={2007},
-  publisher={IOP Publishing}
 }
 @article{pinheiro2010electrical,
   title={Electrical and kinetic model of an atmospheric rf device for plasma aerodynamics applications},
@@ -1411,5 +1401,430 @@ type = {Conference Proceedings},
    ISSN = {1070-6631},
    url = {https://aip.scitation.org/doi/pdf/10.1063/1.1825451},
    year = {2005},
+   type = {Journal Article}
+}
+@phdthesis{yu2017,
+   author = {俞建阳},
+   title = {DBD等离子体诱导涡结构控制附面层流动研究},
+   university = {哈尔滨工业大学},
+   year = {2017},
+   type = {Thesis}
+}
+@article{Enloe2004,
+   author = {Enloe, C Lon and McLaughlin, Thomas E and Van Dyken, Robert D and Kachner, KD and Jumper, Eric J and Corke, Thomas C and Post, M and Haddad, O},
+   title = {Mechanisms and responses of a dielectric barrier plasma actuator: Geometric effects},
+   journal = {AIAA journal},
+   volume = {42},
+   number = {3},
+   pages = {595-604},
+   ISSN = {0001-1452},
+   year = {2004},
+   type = {Journal Article}
+}
+@article{Debien2012,
+   author = {Debien, Antoine and Benard, Nicolas and Moreau, Eric},
+   title = {Streamer inhibition for improving force and electric wind produced by DBD actuators},
+   journal = {Journal of Physics D: Applied Physics},
+   volume = {45},
+   number = {21},
+   pages = {215201},
+   ISSN = {0022-3727},
+   year = {2012},
+   type = {Journal Article}
+}
+@article{Kriegseis2011,
+   author = {Kriegseis, Jochen and Grundmann, Sven and Tropea, Cameron},
+   title = {Power consumption, discharge capacitance and light emission as measures for thrust production of dielectric barrier discharge plasma actuators},
+   journal = {Journal of Applied Physics},
+   volume = {110},
+   number = {1},
+   pages = {013305},
+   ISSN = {0021-8979},
+   year = {2011},
+   type = {Journal Article}
+}
+@article{Hoskinson2010,
+   author = {Hoskinson, AR and Hershkowitz, N},
+   title = {Differences between dielectric barrier discharge plasma actuators with cylindrical and rectangular exposed electrodes},
+   journal = {Journal of Physics D: Applied Physics},
+   volume = {43},
+   number = {6},
+   pages = {065205},
+   ISSN = {0022-3727},
+   year = {2010},
+   type = {Journal Article}
+}
+@inproceedings{Durscher2011,
+   author = {Durscher, Ryan and Roy, Subrata},
+   title = {Force measurement techniques and preliminary results using aerogels and ferroelectrics for dielectric barrier discharge actuators},
+   booktitle = {42nd AIAA Plasmadynamics and Lasers Conference in conjunction with the 18th International Conference on MHD Energy Conversion (ICMHD)},
+   pages = {3735},
+   year = {2011},
+   type = {Conference Proceedings}
+}
+@article{Thomas2009,
+   author = {Thomas, Flint O and Corke, Thomas C and Iqbal, Muhammad and Kozlov, Alexey and Schatzman, David},
+   title = {Optimization of dielectric barrier discharge plasma actuators for active aerodynamic flow control},
+   journal = {AIAA journal},
+   volume = {47},
+   number = {9},
+   pages = {2169-2178},
+   ISSN = {0001-1452},
+   year = {2009},
+   type = {Journal Article}
+}
+@article{Jolibois2009,
+   author = {Jolibois, J and Moreau, E},
+   title = {Enhancement of the electromechanical performances of a single dielectric barrier discharge actuator},
+   journal = {IEEE Transactions on Dielectrics and Electrical Insulation},
+   volume = {16},
+   number = {3},
+   pages = {758-767},
+   ISSN = {1070-9878},
+   year = {2009},
+   type = {Journal Article}
+}
+@article{Kotsonis2011,
+   author = {Kotsonis, M and Ghaemi, S},
+   title = {Forcing mechanisms of dielectric barrier discharge plasma actuators at carrier frequency of 625 Hz},
+   journal = {Journal of Applied Physics},
+   volume = {110},
+   number = {11},
+   pages = {113301},
+   ISSN = {0021-8979},
+   url = {https://aip.scitation.org/doi/pdf/10.1063/1.3664695},
+   year = {2011},
+   type = {Journal Article}
+}
+@article{Nishida2016,
+   author = {Nishida, Hiroyuki and Nonomura, Taku and Abe, Takashi},
+   title = {Numerical Study on Spanwise Nonuniformity in Body-Force Field of Dielectric-Barrier-Discharge Plasma Actuator},
+   journal = {AIAA Journal},
+   volume = {54},
+   number = {2},
+   pages = {659-669},
+   ISSN = {0001-1452
+1533-385X},
+   DOI = {10.2514/1.j054315},
+   year = {2016},
+   type = {Journal Article}
+}
+@article{Nishida2011,
+   author = {Nishida, Hiroyuki and Abe, Takashi},
+   title = {Numerical analysis of plasma evolution on dielectric barrier discharge plasma actuator},
+   journal = {Journal of Applied Physics},
+   volume = {110},
+   number = {1},
+   pages = {013302},
+   ISSN = {0021-8979
+1089-7550},
+   DOI = {10.1063/1.3603001},
+   year = {2011},
+   type = {Journal Article}
+}
+@article{Boeuf2009,
+   author = {Boeuf, J. P. and Lagmich, Y. and Pitchford, L. C.},
+   title = {Contribution of positive and negative ions to the electrohydrodynamic force in a dielectric barrier discharge plasma actuator operating in air},
+   journal = {Journal of Applied Physics},
+   volume = {106},
+   number = {2},
+   pages = {023115},
+   ISSN = {0021-8979
+1089-7550},
+   DOI = {10.1063/1.3183960},
+   year = {2009},
+   type = {Journal Article}
+}
+@article{Lagmich2008,
+   author = {Lagmich, Y. and Callegari, Th and Pitchford, L. C. and Boeuf, J. P.},
+   title = {Model description of surface dielectric barrier discharges for flow control},
+   journal = {Journal of Physics D: Applied Physics},
+   volume = {41},
+   number = {9},
+   pages = {095205},
+   ISSN = {0022-3727
+1361-6463},
+   DOI = {10.1088/0022-3727/41/9/095205},
+   year = {2008},
+   type = {Journal Article}
+}
+@article{LiZX2015,
+   author = {Li, Zexiang and Hu, Baopeng and Lan, Shilong and Zhang, Jinbai and Huang, Junji},
+   title = {Control of turbulent channel flow using a plasma-based body force},
+   journal = {Computers \& Fluids},
+   volume = {119},
+   pages = {26-36},
+   ISSN = {0045-7930},
+   DOI = {https://doi.org/10.1016/j.compfluid.2015.07.001},
+   url = {http://www.sciencedirect.com/science/article/pii/S0045793015002273
+https://www.sciencedirect.com/science/article/pii/S0045793015002273?via%3Dihub},
+   year = {2015},
+   type = {Journal Article}
+}
+@article{Rizzetta2011,
+   author = {Rizzetta, Donald P. and Visbal, Miguel R.},
+   title = {Numerical Investigation of Plasma-Based Control for Low-Reynolds-Number Airfoil Flows},
+   journal = {AIAA Journal},
+   volume = {49},
+   number = {2},
+   pages = {411-425},
+   ISSN = {0001-1452},
+   DOI = {10.2514/1.J050755},
+   url = {https://doi.org/10.2514/1.J050755},
+   year = {2011},
+   type = {Journal Article}
+}
+@article{Corke2008,
+   author = {Corke, Thomas C. and Post, Martiqua L. and Orlov, Dmitriy M.},
+   title = {Single dielectric barrier discharge plasma enhanced aerodynamics: physics, modeling and applications},
+   journal = {Experiments in Fluids},
+   volume = {46},
+   number = {1},
+   pages = {1-26},
+   ISSN = {0723-4864
+1432-1114},
+   DOI = {10.1007/s00348-008-0582-5},
+   year = {2008},
+   type = {Journal Article}
+}
+@article{Mertz2011,
+   author = {Mertz, Benjamin E. and Corke, Thomas C.},
+   title = {Single-dielectric barrier discharge plasma actuator modelling and validation},
+   journal = {Journal of Fluid Mechanics},
+   volume = {669},
+   pages = {557-583},
+   ISSN = {0022-1120
+1469-7645},
+   DOI = {10.1017/s0022112010005203},
+   year = {2011},
+   type = {Journal Article}
+}
+@inproceedings{suzen2005,
+   author = {Suzen, Yildirim and Huang, George and Jacob, Jamey and Ashpis, David},
+   title = {Numerical simulations of plasma based flow control applications},
+   booktitle = {35th AIAA Fluid Dynamics Conference and Exhibit},
+   year = {2005},
+   pages = {4633},
+   type = {Conference Proceedings}
+}
+@inproceedings{suzen2007,
+   author = {Suzen, Yildirim and Huang, George and Ashpis, David},
+   title = {Numerical simulations of flow separation control in low-pressure turbines using plasma actuators},
+   booktitle = {45th AIAA Aerospace Sciences Meeting and Exhibit},
+   year = {2007},
+   pages = {937},
+   type = {Conference Proceedings}
+}
+@article{enloe2006,
+   author = {Enloe, C Lon and McLaughlin, Thomas and Font, Gabriel I and Baughn, James W},
+   title = {Parameterization of temporal structure in the single-dielectric-barrier aerodynamic plasma actuator},
+   journal = {AIAA journal},
+   volume = {44},
+   number = {6},
+   pages = {1127-1136},
+   ISSN = {0001-1452},
+   year = {2006},
+   type = {Journal Article}
+}
+@article{Ibrahim2014,
+   author = {Ibrahim, IH and Skote, M},
+   title = {Simulating plasma actuators in a channel flow configuration by utilizing the modified Suzen–Huang model},
+   journal = {Computers \& Fluids},
+   volume = {99},
+   pages = {144-155},
+   ISSN = {0045-7930},
+   year = {2014},
+   type = {Journal Article}
+}
+@article{Eltaweel2014,
+   author = {Eltaweel, Ahmed and Wang, Meng and Kim, Dongjoo and Thomas, Flint O and Kozlov, Alexey V},
+   title = {Numerical investigation of tandem-cylinder noise reduction using plasma-based flow control},
+   journal = {Journal of Fluid Mechanics},
+   volume = {756},
+   pages = {422-451},
+   ISSN = {0022-1120},
+   year = {2014},
+   type = {Journal Article}
+}
+@inproceedings{Debiasi2011,
+   author = {Debiasi, Marco and Li, Jiun-Ming},
+   title = {Experimental study of a DBD-plasma driven channel flow},
+   booktitle = {49th AIAA Aerospace Sciences Meeting including the New Horizons Forum and Aerospace Exposition},
+   pages = {954},
+   year = {2011},
+   type = {Conference Proceedings}
+}
+@article{wang2013Recent,
+   author = {Wang, Jin-Jun and Choi, Kwing-So and Feng, Li-Hao and Jukes, Timothy N. and Whalley, Richard D.},
+   title = {Recent developments in DBD plasma flow control},
+   journal = {Progress in Aerospace Sciences},
+   volume = {62},
+   pages = {52-78},
+   keywords = {DBD plasma actuator
+Flow control
+Aerodynamic control},
+   ISSN = {0376-0421},
+   DOI = {https://doi.org/10.1016/j.paerosci.2013.05.003},
+   url = {http://www.sciencedirect.com/science/article/pii/S0376042113000535
+https://www.sciencedirect.com/science/article/pii/S0376042113000535?via%3Dihub},
+   year = {2013},
+   type = {Journal Article}
+}
+@article{wuyun2015,
+   author = {吴云 and 李应红},
+   title = {等离子体流动控制研究进展与展望},
+   journal = {航空学报},
+   volume = {36},
+   number = {2},
+   pages = {381-405},
+   year = {2015},
+   type = {Journal Article}
+}
+@article{Jukes2006,
+   author = {Jukes, Timothy and Choi, Kwing-So and Johnson, Graham and Scott, Simon},
+   title = {Turbulent Drag Reduction by Surface Plasma Through Spanwise Flow Oscillation},
+   DOI = {10.2514/6.2006-3693},
+   year = {2006},
+   type = {Journal Article}
+}
+@article{Mahfoze2017,
+   author = {Mahfoze, O. and Laizet, S.},
+   title = {Skin-friction drag reduction in a channel flow with streamwise-aligned plasma actuators},
+   journal = {International Journal of Heat and Fluid Flow},
+   volume = {66},
+   pages = {83-94},
+   keywords = {Plasma actuators
+Direct numerical simulation
+Skin-friction drag reduction
+Turbulence},
+   ISSN = {0142-727X},
+   DOI = {https://doi.org/10.1016/j.ijheatfluidflow.2017.05.013},
+   url = {http://www.sciencedirect.com/science/article/pii/S0142727X17300243
+https://www.sciencedirect.com/science/article/pii/S0142727X17300243?via%3Dihub},
+   year = {2017},
+   type = {Journal Article}
+}
+@article{Im2012,
+   author = {Im, S and Do, H and Cappelli, MA},
+   title = {The manipulation of an unstarting supersonic flow by plasma actuator},
+   journal = {Journal of Physics D: Applied Physics},
+   volume = {45},
+   number = {48},
+   pages = {485202},
+   ISSN = {0022-3727},
+   url = {http://iopscience.iop.org/article/10.1088/0022-3727/45/48/485202/pdf},
+   year = {2012},
+   type = {Journal Article}
+}
+@article{Benard2016a,
+   author = {Benard, Nicolas and Sujar-Garrido, Patricia and Bonnet, Jean-Paul and Moreau, Eric},
+   title = {Control of the coherent structure dynamics downstream of a backward facing step by DBD plasma actuator},
+   journal = {International Journal of Heat and Fluid Flow},
+   volume = {61},
+   pages = {158-173},
+   ISSN = {0142-727X},
+   DOI = {https://doi.org/10.1016/j.ijheatfluidflow.2016.04.009},
+   year = {2016},
+   type = {Journal Article}
+}
+@article{Sujar-Garrido2015,
+   author = {Sujar-Garrido, P. and Benard, N. and Moreau, E. and Bonnet, J. P.},
+   title = {Dielectric barrier discharge plasma actuator to control turbulent flow downstream of a backward-facing step},
+   journal = {Experiments in Fluids},
+   volume = {56},
+   number = {4},
+   pages = {70},
+   ISSN = {1432-1114},
+   DOI = {10.1007/s00348-015-1939-1},
+   year = {2015},
+   type = {Journal Article}
+}
+@article{Benard2016b,
+   author = {Benard, N. and Pons-Prats, J. and Periaux, J. and Bugeda, G. and Braud, P. and Bonnet, J. P. and Moreau, E.},
+   title = {Turbulent separated shear flow control by surface plasma actuator: experimental optimization by genetic algorithm approach},
+   journal = {Experiments in Fluids},
+   volume = {57},
+   number = {2},
+   pages = {22},
+   ISSN = {1432-1114},
+   DOI = {10.1007/s00348-015-2107-3},
+   url = {https://doi.org/10.1007/s00348-015-2107-3},
+   year = {2016},
+   type = {Journal Article}
+}
+@article{Benard2011a,
+   author = {Benard, N. and III, L. N. Cattafesta and Moreau, E. and Griffin, J. and Bonnet, J. P.},
+   title = {On the benefits of hysteresis effects for closed-loop separation control using plasma actuation},
+   journal = {Physics of Fluids},
+   volume = {23},
+   number = {8},
+   pages = {083601},
+   DOI = {10.1063/1.3614482},
+   year = {2011},
+   type = {Journal Article}
+}
+@inproceedings{Peschke2013,
+   author = {Peschke, Philip and Goekce, Sami and Leyland, Penelope and Ott, Peter and Hollenstein, Christoph},
+   title = {Experimental investigation of pulsed dielectric barrier discharge actuators in sub-and transonic flow},
+   booktitle = {44th AIAA Plasmadynamics and Lasers Conference},
+   pages = {2885},
+   year = {2013},
+   type = {Conference Proceedings}
+}
+@article{huang2006,
+   author = {Huang, Junhui and Corke, Thomas C and Thomas, Flint O},
+   title = {Unsteady plasma actuators for separation control of low-pressure turbine blades},
+   journal = {AIAA journal},
+   volume = {44},
+   number = {7},
+   pages = {1477-1487},
+   ISSN = {0001-1452},
+   year = {2006},
+   type = {Journal Article}
+}
+@article{Ness2012,
+   author = {Ness, Daniel Van and Corke, Thomas C and Morris, Scott C},
+   title = {Plasma actuator blade tip clearance flow control in a linear turbine cascade},
+   journal = {Journal of Propulsion and Power},
+   volume = {28},
+   number = {3},
+   pages = {504-516},
+   ISSN = {0748-4658},
+   year = {2012},
+   type = {Journal Article}
+}
+@article{He2009,
+   author = {He, Chuan and Corke, Thomas C and Patel, Mehul P},
+   title = {Plasma flaps and slats: an application of weakly ionized plasma actuators},
+   journal = {Journal of Aircraft},
+   volume = {46},
+   number = {3},
+   pages = {864-873},
+   ISSN = {0021-8669},
+   year = {2009},
+   type = {Journal Article}
+}
+@article{Wei2013bang,
+   author = {Wei, Qingkai and Niu, Zhongguo and Chen, Bao and Huang, Xun},
+   title = {Bang-bang control applied in airfoil roll control with plasma actuators},
+   journal = {Journal of aircraft},
+   volume = {50},
+   number = {2},
+   pages = {670-677},
+   ISSN = {0021-8669},
+   year = {2013},
+   type = {Journal Article}
+}
+@article{Riherd2014,
+   author = {Riherd, Mark and Roy, Subrata},
+   title = {Stabilization of boundary layer streaks by plasma actuators},
+   journal = {Journal of Physics D: Applied Physics},
+   volume = {47},
+   number = {12},
+   pages = {125203},
+   ISSN = {0022-3727
+1361-6463},
+   DOI = {10.1088/0022-3727/47/12/125203},
+   year = {2014},
    type = {Journal Article}
 }
