--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -1828,3 +1828,109 @@ https://www.sciencedirect.com/science/article/pii/S0142727X17300243?via%3Dihub},
    year = {2014},
    type = {Journal Article}
 }
+@article{Simon2018,
+   author = {Simon, Bernhard and Markus, Daniel and Tropea, Cameron and Grundmann, Sven},
+   title = {Cancellation of Tollmien–Schlichting Waves in Direct Vicinity of a Plasma Actuator},
+   journal = {AIAA Journal},
+   pages = {1-10},
+   ISSN = {0001-1452},
+   DOI = {10.2514/1.J056265},
+   url = {https://doi.org/10.2514/1.J056265},
+   year = {2018},
+   type = {Journal Article}
+}
+@article{Choi2011,
+   author = {Choi, K. S. and Jukes, T. and Whalley, R.},
+   title = {Turbulent boundary-layer control with plasma actuators},
+   journal = {Philos Trans A Math Phys Eng Sci},
+   volume = {369},
+   number = {1940},
+   pages = {1443-58},
+   note = {Choi, Kwing-So
+Jukes, Timothy
+Whalley, Richard
+eng
+England
+2011/03/09 06:00
+Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rsta.2010.0362.},
+   ISSN = {1364-503X (Print)
+1364-503X (Linking)},
+   DOI = {10.1098/rsta.2010.0362},
+   url = {http://www.ncbi.nlm.nih.gov/pubmed/21382824},
+   year = {2011},
+   type = {Journal Article}
+}
+@article{Whalley2014,
+   author = {Whalley, Richard D. and Choi, Kwing-So},
+   title = {Turbulent boundary-layer control with plasma spanwise travelling waves},
+   journal = {Experiments in Fluids},
+   volume = {55},
+   number = {8},
+   ISSN = {0723-4864
+1432-1114},
+   DOI = {10.1007/s00348-014-1796-3},
+   year = {2014},
+   type = {Journal Article}
+}
+@book{Schlichting1979,
+  title={Boundary Layer Theory},
+  author={Schlichting, H},
+  year={1979},
+  publisher={McGraw-Hill}
+}
+@article{Gray1952,
+   author = {Gray, WE},
+   title = {The nature of the boundary layer flow at the nose of a swept wing},
+   journal = {Roy. Aircraft Est. TM},
+   volume = {256},
+   year = {1952},
+   type = {Journal Article}
+}
+@article{Aranl2000,
+   author = {Arnal, D. and Casalis, G.},
+   title = {Laminar-turbulent transition prediction in three-dimensional flows},
+   journal = {Progress in Aerospace Sciences},
+   volume = {36},
+   number = {2},
+   pages = {173-191},
+   ISSN = {0376-0421},
+   DOI = {https://doi.org/10.1016/S0376-0421(00)00002-6},
+   url = {http://www.sciencedirect.com/science/article/pii/S0376042100000026},
+   year = {2000},
+   type = {Journal Article}
+}
+@article{Deyhle1996,
+   author = {Deyhle, H and Bippes, H},
+   title = {Disturbance growth in an unstable three-dimensional boundary layer and its dependence on environmental conditions},
+   journal = {Journal of Fluid Mechanics},
+   volume = {316},
+   pages = {73-113},
+   ISSN = {1469-7645},
+   year = {1996},
+   type = {Journal Article}
+}
+@article{Li2014,
+   author = {Li, Fei and Choudhari, Meelan M. and Duan, Lian and Chang, Chau-Lyan},
+   title = {Nonlinear development and secondary instability of traveling crossflow vortices},
+   journal = {Physics of Fluids},
+   volume = {26},
+   number = {6},
+   pages = {064104},
+   ISSN = {1070-6631
+1089-7666},
+   DOI = {10.1063/1.4883256},
+   year = {2014},
+   type = {Journal Article}
+}
+@article{Bippes1991,
+   author = {Bippes, H and Müller, B and Wagner, M},
+   title = {Measurements and stability calculations of the disturbance growth in an unstable three‐dimensional boundary layer},
+   journal = {Physics of Fluids A: Fluid Dynamics (1989-1993)},
+   volume = {3},
+   number = {10},
+   pages = {2371-2377},
+   ISSN = {0899-8213},
+   url = {http://scitation.aip.org/docserver/fulltext/aip/journal/pofa/3/10/1.858176.pdf?expires=1466770305&id=id&accname=2110148&checksum=3A96BAB95D4B3390F9BD53ECA3E2E7C6},
+   year = {1991},
+   type = {Journal Article}
+}
