--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -1934,3 +1934,256 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
    year = {1991},
    type = {Journal Article}
 }
+@article{Li2009roughness,
+   author = {Li, Fei and Choudhari, Meelan and Chang, Chau-Lyan and Streett, Craig and Carpenter, Mark},
+   title = {Roughness Based Crossflow Transition Control: A Computational Assessment},
+   DOI = {10.2514/6.2009-4105},
+   year = {2009},
+   type = {Journal Article}
+}
+@article{Lovig2014,
+   author = {Lovig, Erica N and Downs, Robert S and White, Edward B},
+   title = {Passive laminar flow control at low turbulence levels},
+   journal = {AIAA journal},
+   volume = {52},
+   number = {5},
+   pages = {1072-1075},
+   ISSN = {0001-1452},
+   year = {2014},
+   type = {Journal Article}
+}
+@article{Friederich2012,
+   author = {Friederich, Tillmann and Kloker, Markus J.},
+   title = {Control of the secondary cross-flow instability using localized suction},
+   journal = {Journal of Fluid Mechanics},
+   volume = {706},
+   pages = {470-495},
+   ISSN = {0022-1120
+1469-7645},
+   DOI = {10.1017/jfm.2012.269},
+   year = {2012},
+   type = {Journal Article}
+}
+@article{Friederich2011,
+   author = {Friederich, Tillmann and Kloker, Markus},
+   title = {Control of Crossflow-Vortex Induced Transition: DNS of Pinpoint Suction},
+   DOI = {10.2514/6.2011-3884},
+   year = {2011},
+   type = {Journal Article}
+}
+@article{Robinson1991,
+   author = {Robinson, Stephen K},
+   title = {Coherent motions in the turbulent boundary layer},
+   journal = {Annual Review of Fluid Mechanics},
+   volume = {23},
+   number = {1},
+   pages = {601-639},
+   ISSN = {0066-4189},
+   year = {1991},
+   type = {Journal Article}
+}
+@article{Cossu2009,
+   author = {Cossu, Carlo and Pujals, Gregory and Depardon, Sebastien},
+   title = {Optimal transient growth and very large–scale structures in turbulent boundary layers},
+   journal = {Journal of Fluid Mechanics},
+   volume = {619},
+   pages = {79-94},
+   ISSN = {1469-7645},
+   year = {2009},
+   type = {Journal Article}
+}
+@article{Heist2000,
+   author = {Heist, DK and Hanratty, TJ and Na, Y},
+   title = {Observations of the formation of streamwise vortices by rotation of arch vortices},
+   journal = {Physics of Fluids},
+   volume = {12},
+   number = {11},
+   pages = {2965-2975},
+   ISSN = {1070-6631},
+   year = {2000},
+   type = {Journal Article}
+}
+@article{Schoppa2002,
+   author = {Schoppa, W. and Hussain, F.},
+   title = {Coherent structure generation in near-wall turbulence},
+   journal = {Journal of Fluid Mechanics},
+   volume = {453},
+   pages = {57-108},
+   ISSN = {0022-1120},
+   DOI = {10.1017/S002211200100667X},
+   url = {https://www.cambridge.org/core/article/coherent-structure-generation-in-nearwall-turbulence/F90A8C43AB7DFEAAB4CB4115893255DA},
+   year = {2002},
+   type = {Journal Article}
+}
+@article{White2008Mechanics,
+   author = {White, Christopher M and Mungal, M Godfrey},
+   title = {Mechanics and prediction of turbulent drag reduction with polymer additives},
+   journal = {Annu. Rev. Fluid Mech.},
+   volume = {40},
+   pages = {235-256},
+   ISSN = {0066-4189},
+   year = {2008},
+   type = {Journal Article}
+}
+@article{Garcia2011,
+   author = {Garc\'ia-Mayoral, Ricardo and Jim\'enez, Javier},
+   title = {Drag reduction by riblets},
+   journal = {Philosophical Transactions of the Royal Society of London A: Mathematical, Physical and Engineering Sciences},
+   volume = {369},
+   number = {1940},
+   pages = {1412-1427},
+   ISSN = {1364-503X},
+   url = {http://rsta.royalsocietypublishing.org/content/roypta/369/1940/1412.full.pdf},
+   year = {2011},
+   type = {Journal Article}
+}
+@article{Choi1994,
+   author = {Choi, Haecheon and Moin, Parviz and Kim, John},
+   title = {Active turbulence control for drag reduction in wall-bounded flows},
+   journal = {Journal of Fluid Mechanics},
+   volume = {262},
+   pages = {75-110},
+   ISSN = {1469-7645},
+   year = {1994},
+   type = {Journal Article}
+}
+@article{Hammond1998,
+   author = {Hammond, EP and Bewley, TR and Moin, P},
+   title = {Observed mechanisms for turbulence attenuation and enhancement in opposition-controlled wall-bounded flows},
+   journal = {Physics of Fluids},
+   volume = {10},
+   number = {9},
+   pages = {2421-2423},
+   ISSN = {1070-6631},
+   year = {1998},
+   type = {Journal Article}
+}
+@article{Deng2012,
+   author = {Deng, B-Q and Xu, C-X},
+   title = {Influence of active control on STG-based generation of streamwise vortices in near-wall turbulence},
+   journal = {Journal of Fluid Mechanics},
+   volume = {710},
+   pages = {234-259},
+   ISSN = {1469-7645},
+   year = {2012},
+   type = {Journal Article}
+}
+@article{Jung1992,
+   author = {Jung, WJ and Mangiavacchi, N and Akhavan, R},
+   title = {Suppression of turbulence in wall‐bounded flows by high‐frequency spanwise oscillations},
+   journal = {Physics of Fluids A: Fluid Dynamics},
+   volume = {4},
+   number = {8},
+   pages = {1605-1607},
+   ISSN = {0899-8213},
+   year = {1992},
+   type = {Journal Article}
+}
+@article{Choi2002,
+   author = {Choi, Jung-Il and Xu, Chun-Xiao and Sung, Hyung Jin},
+   title = {Drag Reduction by Spanwise Wall Oscillation in Wall-Bounded Turbulent Flows},
+   journal = {AIAA Journal},
+   volume = {40},
+   number = {5},
+   pages = {842-850},
+   ISSN = {0001-1452
+1533-385X},
+   DOI = {10.2514/2.1750},
+   year = {2002},
+   type = {Journal Article}
+}
+@article{Yakeno2014,
+   author = {Yakeno, Aiko and Hasegawa, Yosuke and Kasagi, Nobuhide},
+   title = {Modification of quasi-streamwise vortical structure in a drag-reduced turbulent channel flow with spanwise wall oscillation},
+   journal = {Physics of Fluids},
+   volume = {26},
+   number = {8},
+   pages = {085109},
+   ISSN = {1070-6631
+1089-7666},
+   DOI = {10.1063/1.4893903},
+   year = {2014},
+   type = {Journal Article}
+}
+@article{Quadrio2011,
+   author = {Quadrio, Maurizio and Ricco, Pierre},
+   title = {The laminar generalized Stokes layer and turbulent drag reduction},
+   journal = {Journal of Fluid Mechanics},
+   volume = {667},
+   pages = {135-157},
+   ISSN = {1469-7645},
+   year = {2011},
+   type = {Journal Article}
+}
+@phdthesis{Xie2014,
+   author = {Xie, Wenxuan},
+   title = {Turbulence skin-friction reduction by traveling waves: a DNS study},
+   university = {Politecnico di Milano},
+   year = {2014},
+   type = {Thesis}
+}
+@article{Xu2015bi,
+   author = {许春晓},
+   title = {壁湍流相干结构和减阻控制机理},
+   journal = {力学与实践},
+   volume = {45},
+   number = {3},
+   pages = {111-140},
+   year = {2015},
+   type = {Journal Article}
+}
+@inproceedings{Huynh2007,
+   author = {Huynh, Ht T},
+   title = {A flux reconstruction approach to high-order schemes including discontinuous Galerkin methods},
+   booktitle = {18th AIAA Computational Fluid Dynamics Conference},
+   pages = {4079},
+   year = {2007},
+   type = {Conference Proceedings}
+}
+@article{WangGao2009,
+   author = {Wang, ZJ and Gao, Haiyang},
+   title = {A unifying lifting collocation penalty formulation including the discontinuous Galerkin, spectral volume/difference methods for conservation laws on mixed grids},
+   journal = {Journal of Computational Physics},
+   volume = {228},
+   number = {21},
+   pages = {8161-8186},
+   ISSN = {0021-9991},
+   url = {https://www.sciencedirect.com/science/article/pii/S0021999109004239?via%3Dihub},
+   year = {2009},
+   type = {Journal Article}
+}
+@article{Vincent2011,
+   author = {Vincent, Peter E and Castonguay, Patrice and Jameson, Antony},
+   title = {A new class of high-order energy stable flux reconstruction schemes},
+   journal = {Journal of Scientific Computing},
+   volume = {47},
+   number = {1},
+   pages = {50-72},
+   ISSN = {0885-7474},
+   url = {https://link.springer.com/content/pdf/10.1007%2Fs10915-010-9420-z.pdf},
+   year = {2011},
+   type = {Journal Article}
+}
+@article{Jameson2012,
+   author = {Jameson, Antony and Vincent, Peter E and Castonguay, Patrice},
+   title = {On the non-linear stability of flux reconstruction schemes},
+   journal = {Journal of Scientific Computing},
+   volume = {50},
+   number = {2},
+   pages = {434-445},
+   ISSN = {0885-7474},
+   url = {https://link.springer.com/content/pdf/10.1007%2Fs10915-011-9490-6.pdf},
+   year = {2012},
+   type = {Journal Article}
+}
+@article{GaoWang2013,
+   author = {Gao, Haiyang and Wang, ZJ},
+   title = {A conservative correction procedure via reconstruction formulation with the chain-rule divergence evaluation},
+   journal = {Journal of Computational Physics},
+   volume = {232},
+   number = {1},
+   pages = {7-13},
+   ISSN = {0021-9991},
+   year = {2013},
+   type = {Journal Article}
+}
