--- a/data/ack.tex
+++ b/data/ack.tex
@@ -1,10 +1,9 @@
 % 如果使用声明扫描页，将可选参数指定为扫描后的 PDF 文件名，例如：
 % \begin{acknowledgement}[scan-statement.pdf]
 \begin{acknowledgement}
-  衷心感谢导师符松教授和课题组内王亮助理研究员对本人的精心指导。他们的言传身教将使
-  我终生受益。
+  衷心感谢导师符松教授和王亮老师对本人的精心指导。他们的言传身教将使我终生受益。
 
-  同时衷心感谢徐国亮师兄，任杰师兄在流动稳定性方面的悉心指导，帮助我解决了不少问题。
+  同时衷心感谢徐国亮师兄，任杰师兄在流动稳定性方面的悉心指导，帮助我解决了不少问题。感谢朱辉师兄教我使用hpMusic计算程序。
 
   感谢 \LaTeX 和 \thuthesis\cite{thuthesis}，帮我节省了不少时间。
 \end{acknowledgement}
